# pixels

./: .gitignore  README.md  church.py  client.py  index.html  main.py  package.json  pixel-grid.d.ts  pyproject.toml  requirements.txt  rick.py  tsconfig.json
church-server/: .replit  client.py  keymgr.py  main.py  pyproject.toml
church-server/static/: index.html
church-server/static/css/: main.css
church-server/static/javascript/: IhaveSomeFunSometimes.js  mainscript.js
src/: client.js  panzoom.js  ui.js
src/components/: pixel-grid.tsx
src/pages/: index.tsx
