[tool.poetry]
name = "repl_python3_beta_pixel-tasks"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
aiohttp = "^3.7.4"
fastapi = "^0.65.1"
uvicorn = "^0.13.4"
aiofiles = "^0.7.0"
replit = "^3.1.0"
pillow = "^8.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

